# learn

./: .gitignore  README.md
BITS_WILP_MTech_AI_ML/Semester_1/C0_Python_For_Data_Science/: Exercise1.ipynb  pyproject.toml
java/udemy-spring-boot-3_chad_darby/01-spring-boot-overview/01-demo-project/: pom.xml
java/udemy-spring-boot-3_chad_darby/01-spring-boot-overview/02-demo-devtools/: pom.xml
java/udemy-spring-boot-3_chad_darby/01-spring-boot-overview/03-demo-actuator/: pom.xml
java/udemy-spring-boot-3_chad_darby/01-spring-boot-overview/04-demo-security/: pom.xml
java/udemy-spring-boot-3_chad_darby/01-spring-boot-overview/05-demo-server-config/: pom.xml
vue3/composition-api-learn/: README.md  package-lock.json  package.json
vue3/composition-api-learn/src/: App.vue
vue3/noteballs/: components.d.ts  package-lock.json  package.json
vue3/noteballs/src/: App.vue  main.ts
vue3/noteballs/src/components/: AppBar.vue  NavBar.vue  NavDrawer.vue  NavItem.vue
vue3/noteballs/src/components/header/: AppBar.vue  NavBar.vue  NavDrawer.vue  NavItem.vue
vue3/noteballs/src/components/notes/: NewNote.vue  NewNoteActions.vue  (+3 more)
vue3/noteballs/src/const/: notes.ts
vue3/noteballs/src/plugins/: vuetify.ts
vue3/noteballs/src/routes/: routes.ts
vue3/noteballs/src/views/: NotesView.vue  StatsView.vue
vue3/options-api/: README.md  interviewQuestions.md  package-lock.json  package.json
vue3/options-api/src/: App.vue
vue3/udemy-vue3-composition-api/: README.md  index.html  package-lock.json  package.json
vue3/udemy-vue3-composition-api/src/views/: HomeView.vue
(+7 files in other folders)
